shawk/awk/rdpg/src/compiler/parser/tests/accept/bad_first.txt
error: file grammars/bad_first.rdpg, line 1, pos 5: unexpected 'terminal'
START : foo EOI ;
    ^
expected one of: 'EOI' 'start' 

